--- a/mainapp/templates/mainapp/catalog.html
+++ b/mainapp/templates/mainapp/catalog.html
@@ -1,6 +1,7 @@
 {% extends 'mainapp/base.html' %}
 
 {% block container %}
+<div class="main-container">
     <div class="hero-white">
         {% include 'mainapp/includes/inc__main_menu.html' %}
     </div>
@@ -28,4 +29,5 @@
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
