--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -2,143 +2,140 @@
 {% load static %}
 
 {% block container %}
-<div class="main-container">
-    <div class="slider">
-        {% include 'mainapp/includes/inc__main_menu.html' %}
-        <div class="text-slider">
-            <h3 class="green">тенденции</h3>
-            <h3 class="big"> удобные стулья</h3>
-            <p>Новый уровень комфорта. Отличные характеристики. Не сломаются даже если вы весите 200 кг.</p>
-            <a href="#" class="button-order">заказать <img src="{% static 'img/arrow.png' %}" alt=""></a>
-        </div>
-        <div class="navi">
-            <a href="#"></a><a href="#"></a><a href="#"></a>
-        </div>
+<div class="slider">
+    {% include 'mainapp/includes/inc__main_menu.html' %}
+    <div class="text-slider">
+        <h3 class="green">тенденции</h3>
+        <h3 class="big"> удобные стулья</h3>
+        <p>Новый уровень комфорта. Отличные характеристики. Не сломаются даже если вы весите 200 кг.</p>
+        <a href="#" class="button-order">заказать <img src="{% static 'img/arrow.png' %}" alt=""></a>
     </div>
-    <div class="featured">
-        <div class="featured-menu">
-            <a class="active" href="#">Популярные</a><a href="#">Новинки</a>
-        </div>
-        <a class="explore" href="#">показать все <img src="{% static 'img/arrow.png' %}" alt=""></a>
-        <div class="clearfix">
-        </div>
+    <div class="navi">
+        <a href="#"></a><a href="#"></a><a href="#"></a>
+    </div>
+</div>
+<div class="featured">
+    <div class="featured-menu">
+        <a class="active" href="#">Популярные</a><a href="#">Новинки</a>
+    </div>
+    <a class="explore" href="#">показать все <img src="{% static 'img/arrow.png' %}" alt=""></a>
+    <div class="clearfix">
+    </div>
 
-        <div class="tab-content-container padding-site">
-            <div class="tab-content">
-                <div class="block block-1">
-                    <img src="{% static 'img/product-1.jpg' %}" alt="">
-                    <div class="hidden">
-                        <a href="#"><img src="{% static 'img/arrow_181.png' %}" alt=""></a>
-                        <h4>Купи</h4>
-                        <p>Seat and back with upholstery made of cold cure foam</p>
-                    </div>
+    <div class="tab-content-container ">
+        <div class="tab-content">
+            <div class="block block-1">
+                <img src="{% static 'img/product-1.jpg' %}" alt="">
+                <div class="hidden">
+                    <a href="#"><img src="{% static 'img/arrow_181.png' %}" alt=""></a>
+                    <h4>Купи</h4>
+                    <p>Seat and back with upholstery made of cold cure foam</p>
                 </div>
-                <div class="block block-2">
-                    <img src="{% static 'img/product-3.jpg' %}" alt="">
-                    <div class="hidden">
-                        <a href="#"><img src="{% static 'img/arrow_181.png' %}" alt=""></a>
-                        <h4>Горячее предложение</h4>
-                        <p>В кредит под 25% годовых на 12 месяце либо в рассрочку на 3 месяца</p>
-                    </div>
+            </div>
+            <div class="block block-2">
+                <img src="{% static 'img/product-3.jpg' %}" alt="">
+                <div class="hidden">
+                    <a href="#"><img src="{% static 'img/arrow_181.png' %}" alt=""></a>
+                    <h4>Горячее предложение</h4>
+                    <p>В кредит под 25% годовых на 12 месяце либо в рассрочку на 3 месяца</p>
                 </div>
-                <div class="block block-3">
-                    <img src="{% static 'img/product-4.jpg' %}" alt="">
-                    <div class="hidden">
-                        <a href="#"><img src="{% static 'img/arrow_181.png' %}" alt=""></a>
-                        <h4>Возьми кредит и купи!</h4>
-                        <p>Seat and back with upholstery made of cold cure foam</p>
-                    </div>
+            </div>
+            <div class="block block-3">
+                <img src="{% static 'img/product-4.jpg' %}" alt="">
+                <div class="hidden">
+                    <a href="#"><img src="{% static 'img/arrow_181.png' %}" alt=""></a>
+                    <h4>Возьми кредит и купи!</h4>
+                    <p>Seat and back with upholstery made of cold cure foam</p>
                 </div>
-                <div class="block block-4">
-                    <img src="{% static 'img/product-2.jpg' %}" alt="">
-                    <div class="hidden">
-                        <a href="#"><img src="{% static 'img/arrow_181.png' %}" alt=""></a>
-                        <h4>Хорошая покупка</h4>
-                        <p>Seat and back with upholstery made of cold cure foam</p>
-                    </div>
+            </div>
+            <div class="block block-4">
+                <img src="{% static 'img/product-2.jpg' %}" alt="">
+                <div class="hidden">
+                    <a href="#"><img src="{% static 'img/arrow_181.png' %}" alt=""></a>
+                    <h4>Хорошая покупка</h4>
+                    <p>Seat and back with upholstery made of cold cure foam</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="promo-product">
-        <div class="promo-content-1">
-            <h2>эксклюзивные</h2>
-            <h4>Fishnet Chair</h4>
-            <!-- <a href="#">Order Us <img src="img/arrow_151.png" alt=""></a> -->
-            <a href="#" class="button-order">заказать <img src="{% static 'img/arrow.png' %}" alt=""></a>
-        </div>
-        <div class="promo-content-2">
-            <h2>эксклюзивные</h2>
-            <h4>Fishnet Chair</h4>
-            <!-- <a href="#">Order Us <img src="img/arrow_151.png" alt=""></a> -->
-            <a href="#" class="button-order">заказать <img src="{% static 'img/arrow.png' %}" alt=""></a>
+</div>
+<div class="promo-product">
+    <div class="promo-content-1">
+        <h2>эксклюзивные</h2>
+        <h4>Fishnet Chair</h4>
+        <!-- <a href="#">Order Us <img src="img/arrow_151.png" alt=""></a> -->
+        <a href="#" class="button-order">заказать <img src="{% static 'img/arrow.png' %}" alt=""></a>
+    </div>
+    <div class="promo-content-2">
+        <h2>эксклюзивные</h2>
+        <h4>Fishnet Chair</h4>
+        <!-- <a href="#">Order Us <img src="img/arrow_151.png" alt=""></a> -->
+        <a href="#" class="button-order">заказать <img src="{% static 'img/arrow.png' %}" alt=""></a>
+    </div>
+</div>
+<div class="trending-product padding-site">
+    <div class="title">
+        <h4>В тренде</h4>
+        <div class="btn-ghost-2">
+            <a href="#">показать все <img src="img/arrow_121.png" alt=""></a>
         </div>
     </div>
-    <div class="trending-product padding-site">
-        <div class="title">
-            <h4>В тренде</h4>
-            <div class="btn-ghost-2">
-                <a href="#">показать все <img src="img/arrow_121.png" alt=""></a>
-            </div>
-        </div>
-        <div class="products">
-            <div class="product"><a href="#"><img src="{% static 'img/product-11.jpg' %}" alt=""></a></div>
-            <div class="product"><a href="#"><img src="{% static 'img/product-21.jpg' %}" alt=""></a></div>
-            <div class="product"><a href="#"><img src="{% static 'img/product-31.jpg' %}" alt=""></a></div>
-            <div class="product"><a href="#"><img src="{% static 'img/product-41.jpg' %}" alt=""></a></div>
-            <div class="product"><a href="#"><img src="{% static 'img/product-51.jpg' %}" alt=""></a></div>
-            <div class="product"><a href="#"><img src="{% static 'img/product-61.jpg' %}" alt=""></a></div>
-        </div>
+    <div class="products">
+        <div class="product"><a href="#"><img src="{% static 'img/product-11.jpg' %}" alt=""></a></div>
+        <div class="product"><a href="#"><img src="{% static 'img/product-21.jpg' %}" alt=""></a></div>
+        <div class="product"><a href="#"><img src="{% static 'img/product-31.jpg' %}" alt=""></a></div>
+        <div class="product"><a href="#"><img src="{% static 'img/product-41.jpg' %}" alt=""></a></div>
+        <div class="product"><a href="#"><img src="{% static 'img/product-51.jpg' %}" alt=""></a></div>
+        <div class="product"><a href="#"><img src="{% static 'img/product-61.jpg' %}" alt=""></a></div>
     </div>
-    <div class="hot-deals padding-site">
-        <div class="slider-content">
-            <h4>Hot deal</h4>
+</div>
+<div class="hot-deals padding-site">
+    <div class="slider-content">
+        <h4>Hot deal</h4>
+        <h2>Fishnet Chair</h2>
+        <p>Seat and back with upholstery made of
+            cold cure foam.<br>
+            Steel frame, available
+            in matt powder-coated
+            black</p>
+        <a href="#" class="button-order">заказать <img src="{% static 'img/arrow.png' %}" alt=""></a>
+    </div>
+    <div class="navigation-bottom">
+        <a class="circle"></a>
+        <a class="circle active"></a>
+        <a class="circle"></a>
+    </div>
+</div>
+<div class="exclusive-products padding-site">
+    <div class="product-content">
+        <div class="product-content-hover">
+            <h4>exclusive</h4>
             <h2>Fishnet Chair</h2>
             <p>Seat and back with upholstery made of
                 cold cure foam.<br>
                 Steel frame, available
                 in matt powder-coated
                 black</p>
-                <a href="#" class="button-order">заказать <img src="{% static 'img/arrow.png' %}" alt=""></a>
+            <a href="#" class="button-order">заказать <img src="{% static 'img/arrow.png' %}" alt=""></a>
         </div>
-        <div class="navigation-bottom">
-            <a class="circle"></a>
-            <a class="circle active"></a>
-            <a class="circle"></a>
-        </div>
-    </div>
-    <div class="exclusive-products padding-site">
-        <div class="product-content">
-            <div class="product-content-hover">
-                <h4>exclusive</h4>
-                <h2>Fishnet Chair</h2>
-                <p>Seat and back with upholstery made of
-                    cold cure foam.<br>
-                    Steel frame, available
-                    in matt powder-coated
-                    black</p>
-                <a href="#" class="button-order">заказать <img src="{% static 'img/arrow.png' %}" alt=""></a>
-            </div>
 
-        </div>
-        <div class="product-content-2">
-            <div class="exc-product"><a href="#"><img src="{% static 'img/product-2-sm.jpg' %}" alt=""></a></div>
-            <div class="exc-product"><a href="#"><img src="{% static 'img/product-3-sm.jpg' %}" alt=""></a></div>
-            <div class="exc-product"><a href="#"><img src="{% static 'img/product-4-sm.jpg' %}" alt=""></a></div>
-            <div class="exc-product"><a href="#"><img src="{% static 'img/product-5-sm.jpg' %}" alt=""></a></div>
-        </div>
     </div>
-    <div class="mobile-app padding-site">
-        <div class="content">
-            <h4>mobile app</h4>
-            <h2>Найди. Следовать. <br> Favorite</h2>
-            <p>Сохраняйте избранное и делитесь своим стилем.</p>
-        </div>
-        <div class="app-store">
-            <a class="apple" href="#"><img src="{% static 'img/app-store.png' %}" alt=""></a>
-            <a class="google" href="#"><img src="{% static 'img/google-play.png' %}" alt=""></a>
-        </div>
+    <div class="product-content-2">
+        <div class="exc-product"><a href="#"><img src="{% static 'img/product-2-sm.jpg' %}" alt=""></a></div>
+        <div class="exc-product"><a href="#"><img src="{% static 'img/product-3-sm.jpg' %}" alt=""></a></div>
+        <div class="exc-product"><a href="#"><img src="{% static 'img/product-4-sm.jpg' %}" alt=""></a></div>
+        <div class="exc-product"><a href="#"><img src="{% static 'img/product-5-sm.jpg' %}" alt=""></a></div>
     </div>
-    <div class="clr"></div>
+</div>
+<div class="mobile-app padding-site">
+    <div class="content">
+        <h4>mobile app</h4>
+        <h2>Найди. Следовать. <br> Favorite</h2>
+        <p>Сохраняйте избранное и делитесь своим стилем.</p>
+    </div>
+    <div class="app-store">
+        <a class="apple" href="#"><img src="{% static 'img/app-store.png' %}" alt=""></a>
+        <a class="google" href="#"><img src="{% static 'img/google-play.png' %}" alt=""></a>
+    </div>
 </div>
 {% endblock %}
