--- a/authapp_custom/templates/authapp_custom/customuser_form.html
+++ b/authapp_custom/templates/authapp_custom/customuser_form.html
@@ -1,21 +1,21 @@
-{% extends 'mainapp/base.html' %}
+<!-- {% extends 'mainapp/base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block css %}
+{% block css %} -->
 <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"> -->
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/Chart.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/fontawesome.all.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/butttons.css' %}">
-{% endblock css %}
-{% block js %}
+<!-- {% endblock css %}
+{% block js %} -->
 <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
 <script src="{% static 'js/popper.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/Chart.min.js' %}"></script>
 <script src="{% static 'js/fontawesome.all.min.js' %}"></script>
-{% endblock js %}
-{% block container %}
+<!-- {% endblock js %}
+{% block container %} -->
 <div class="row justify-content-around align-items-center white-text" style="height: 100vh; margin: 0px">
   <div class="center white-text">
     {% if user.is_anonymous %}
@@ -56,4 +56,4 @@
     </form>
   </div>
 </div>
-{% endblock container %}
+<!-- {% endblock container %} -->
