--- a/mainapp/templates/mainapp/includes/inc__main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc__main_menu.html
@@ -1,4 +1,4 @@
-<div class="clearfix">
+<!-- <div class="clearfix">
     <a href="{% url 'mainapp:index' %}" class="logo"></a>
     <ul class="menu">
         <li>
@@ -34,7 +34,53 @@
     </ul>
     <div class="search-menu">
         <a href="#" class="search"></a>
-        <!-- <a href="#" class="basket"></a> -->
-        <a href="{% url 'basket:index' %}" class="basket fa-shopping-basket"></a>
+        <a href="{% url 'basket:index' %}" class="basket"></a>
     </div>
+</div> -->
+
+<div class="header clearfix">
+    <a href="{% url 'mainapp:index' %}" class="logo"></a>
+    <ul class="menu">
+        <li>
+            <a href="{% url 'mainapp:index' %}"
+                class="{% if request.resolver_match.url_name == 'index' %}active{% endif %}">
+                домой
+            </a>
+        </li>
+        <li>
+            <a href="{% url 'mainapp:products' %}"
+                class="{% if request.resolver_match.url_name == 'products' or request.resolver_match.url_name == 'catalog' %}active{% endif %}">
+                продукты
+            </a>
+        </li>
+        <li>
+            <a href="{% url 'mainapp:contact' %}"
+                class="{% if request.resolver_match.url_name == 'contact' %}active{% endif %}">
+                контакты
+            </a>
+        </li>
+        {% if user.is_authenticated %}
+        <a href="{% url 'auth:profile_edit' pk=request.user.pk %}">
+            {{ user.get_full_name|default:user.get_username }}
+        </a>
+        {% endif %}
+        {% if user.is_authenticated %}
+        <a href="{% url 'auth:logout' %}">
+            выход
+        </a>
+        {% else %}
+        <a href="{% url 'auth:login' %}">
+            вход
+        </a>
+        {% endif %}
+    </ul>
+    <div class="search-menu">
+        <a href="#" class="search"></a>
+        {% if user.is_authenticated %}
+        <a href="{% url 'basket:index' %}" class="basket">
+            <span>{{ user.basket_cost|floatformat:0 }} руб ({{ user.basket_total_quantity }} шт)</span>
+        </a>
+        {% endif %}
+    </div>
+
 </div>
