--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -8,7 +8,7 @@
 <div class="details">
     {% include 'mainapp/includes/inc__catalog_menu.html' %}
     <div class="details-products">
-        <div class="details-slider">
+        <!-- <div class="details-slider">
             <div class="slider-product">
                 <img src="{% static 'img/slider1.jpg' %}">
             </div>
@@ -29,27 +29,56 @@
                     </a>
                 </div>
             </div>
+        </div> -->
+        <div class="details-slider">
+            <div class="slider-product">
+                <img src="{{ MEDIA_URL }}{{ hot_product.image }}" alt="{{ hot_product.short_desc }}">
+            </div>
+            <div class="slider-control">
+                <div class="block">
+                    <a href="#"><img src="{{ MEDIA_URL }}{{ hot_product.image }}" alt="вариант 1">
+                        <div class="text"></div>
+                    </a>
+                </div>
+                <div class="block">
+                    <a href="#"><img src="{{ MEDIA_URL }}{{ hot_product.image }}" alt="вариант 2">
+                        <div class="text"></div>
+                    </a>
+                </div>
+                <div class="block">
+                    <a href="#"><img src="{{ MEDIA_URL }}{{ hot_product.image }}" alt="вариант 3">
+                        <div class="text"></div>
+                    </a>
+                </div>
+            </div>
         </div>
 
         <div class="description">
-            <h3 class="big-bold">Отличный стул</h3>
+            <h3 class="big-bold">{{ hot_product.name }}</h3>
             <h3 class="red">горячее предложение</h3>
-            <p class="price"> 2585.9 <span>руб</span></p>
-            <a href="#" class="red-button">
+            <p class="price"> {{ hot_product.price }} <span>руб</span></p>
+            <a href="{% url 'basket:add' hot_product.pk %}" class="red-button">
                 заказать <i class="fa fa-chevron-right" aria-hidden="true"></i>
             </a>
             <div class="description-text">
-                <p>Расположитесь комфортно.</p>
-                <p>Отличное качество материалов
-                    позволит вам это.</p>
-                <p>Различные цвета</p>
-                <p>высочайший уровень
-                    эргономики и прочность.</p>
+                <p>{{ hot_product.short_desc }}</p>
             </div>
         </div>
     </div>
 
     <div class="related">
+        <div class="title clearfix">
+            <h2>Похожие продукты</h2>
+            <a class="explore" href="#">показать все <img src="{% static 'img/arrow.png' %}" alt=""></a>
+        </div>
+        <div class="related-products clearfix">
+            {% for product in related_products %}
+                {% include 'mainapp/includes/inc__product_in_list.html' %}
+            {% endfor %}
+        </div>
+    </div>
+
+    <!-- <div class="related">
         <div class="title clearfix">
             <h2>Похожие продукты</h2>
             <a class="explore" href="#">показать все <img src="{% static 'img/arrow.png' %}" alt=""></a>
@@ -83,6 +112,6 @@
                 </a>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
 {% endblock %}
