--- a/mainapp/templates/mainapp/includes/inc__catalog_menu.html
+++ b/mainapp/templates/mainapp/includes/inc__catalog_menu.html
@@ -1,13 +1,15 @@
 <div class="links clearfix">
     <ul class="links-menu">
         <li>
-            <a href="{% url 'mainapp:catalog' pk=0 %}">
+            <a href="{% url 'mainapp:catalog' pk=0 %}"
+               class="{% if request.resolver_match.kwargs.pk == 0 %}active{% endif %}">
                 все
             </a>
         </li>
         {% for category in categories %}
             <li>
-                <a href="{% url 'mainapp:catalog' pk=category.pk %}">
+                <a href="{% url 'mainapp:catalog' pk=category.pk %}"
+                   class="{% if request.resolver_match.kwargs.pk|add:0 == category.pk %}active{% endif %}">
                     {{ category.name }}
                 </a>
             </li>
