--- a/mainapp/templates/mainapp/catalog.html
+++ b/mainapp/templates/mainapp/catalog.html
@@ -1,33 +1,53 @@
 {% extends 'mainapp/base.html' %}
 
 {% block container %}
-<div class="main-container">
     <div class="hero-white">
         {% include 'mainapp/includes/inc__main_menu.html' %}
     </div>
 
     <div class="details">
         {% include 'mainapp/includes/inc__catalog_menu.html' %}
-
         <div class="related">
             <div class="title clearfix">
                 <h2>Продукты в категории {{ category.name|capfirst }}</h2>
             </div>
             <div class="related-products clearfix">
                 {% for product in products %}
-                    <div class="block">
-                        <a href="{% url 'basket:add' product.pk %}">
-                            <img src="/media/{{ product.image }}" alt="">
-                            <div class="text">
-                                <img src="/static/img/icon-hover.png" alt="img">
-                                <h4>{{ product.name }}</h4>
-                                <p>{{ product.short_desc }}</p>
-                            </div>
-                        </a>
-                    </div>
+                <div class="block">
+                    <a href="{% url 'basket:add' product.pk %}">
+                        <img src="/media/{{ product.image }}" alt="">
+                        <div class="text">
+                            <img src="/static/img/icon-hover.png" alt="img">
+                            <h4>{{ product.name }}</h4>
+                            <p>{{ product.short_desc }}</p>
+                        </div>
+                    </a>
+                </div>
                 {% endfor %}
             </div>
         </div>
     </div>
-</div>
+    <div class="pagination-container">
+        {% if page_obj.has_previous %}
+        <a href="?page={{ page_obj.previous_page_number }}" class="pagination-link pagination-link--previous">
+            <span>Предыдущая</span>
+        </a>
+        {% endif %}
+
+        {% if page_obj.paginator.num_pages > 1 %}
+        {% for page in page_obj.paginator.page_range %}
+        {% if page == page_obj.number %}
+        <span class="pagination-link pagination-link--current">{{ page }}</span>
+        {% else %}
+        <a href="?page={{ page }}" class="pagination-link">{{ page }}</a>
+        {% endif %}
+        {% endfor %}
+        {% endif %}
+
+        {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}" class="pagination-link pagination-link--next">
+            <span>Следующая</span>
+        </a>
+        {% endif %}
+    </div>
 {% endblock %}
