исправил код аутентификации, добавил сообщения с просьбой войти в систему, добавил свой middleware, немнорго поигрался с midlleware и кэшем, в кэш сэтил ip адрес

--- a/mainapp/templates/mainapp/product_page.html
+++ b/mainapp/templates/mainapp/product_page.html
@@ -3,8 +3,9 @@
 {% block css %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
-{% endblock %}
-{% block js %}
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+<!-- <link rel="stylesheet" href="{% static 'css/Chart.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/fontawesome.all.min.css' %}"> -->
 {% endblock %}
 {% block container %}
     <div class="hero-white">
