--- a/basketapp/templates/basketapp/index.html
+++ b/basketapp/templates/basketapp/index.html
@@ -3,37 +3,6 @@
 
 {% block container %}
 <div class="basket_list">
-    {% if basket_items %}
-    {% for item in basket_items %}
-    <div class="basket_record">
-        <img src="/media/{{ item.product.image }}" alt="{{ item.product.short_desc }}">
-        <span class="category_name">{{ item.product.category.name }}</span>
-        <span class="product_name">{{ item.product.name }}</span>
-        <span class="product_price">{{ item.product.price }}&nbspруб</span>
-        <input type="number" name="{{ item.pk }}" min="0" max="{{ item.product.quantity }}" value="{{ item.quantity }}">
-        {# <span class="product_cost">{{ item.product_cost }}&nbspруб</span>#}
-
-        <!-- <a href="{% url 'basket:delete' item.pk %}" class="btn btn-round">
-                        удалить
-                    </a> -->
-        <a href="{% url 'basket:delete' item.pk %}" class="btn btn-round">
-            <i class="fa fa-trash" aria-hidden="true"></i>
-            удалить
-        </a>
-
-    </div>
-    {% endfor %}
-
-    <div class="basket_summary">
-        В корзине {{ user.basket_total_quantity }} товаров общей стоимостью
-        {{ user.basket_cost }} руб
-    </div>
-    {% else %}
-    <h4>Корзина пуста</h4>
-    {% endif %}
-
-    <a href="{% url 'mainapp:index' %}" class="btn btn-round">
-        на главную
-    </a>
+    {% include 'basketapp/inc/inc__basket_items.html' %}
 </div>
 {% endblock %}
