--- a/authapp_custom/templates/authapp_custom/customuser_form.html
+++ b/authapp_custom/templates/authapp_custom/customuser_form.html
@@ -25,7 +25,7 @@
     <div class="row justify-content-center">
       <div class="col-sm-7 col-md-5 col-lg-4">
         {% if user.avatar %}
-        <img src="{{ user.avatar.url }}" alt="" width="100%">
+        <img src="{{ user.avatar.url }}" alt="" width="100">
         {% else %}
         <img src="{{ MEDIA_URL }}avatar_default.svg" alt="" width="100%">
         {% endif %}
