--- a/mainapp/templates/mainapp/catalog.html
+++ b/mainapp/templates/mainapp/catalog.html
@@ -14,7 +14,8 @@
             <div class="related-products clearfix">
                 {% for product in products %}
                 <div class="block">
-                    <a href="{% url 'basket:add' product.pk %}">
+                    <!-- <a href="{% url 'basket:add' product.pk %}"> -->
+                    <a href="{% url 'mainapp:product_page' product.pk %}">
                         <img src="/media/{{ product.image }}" alt="">
                         <div class="text">
                             <img src="/static/img/icon-hover.png" alt="img">
