--- a/mainapp/templates/mainapp/includes/inc__main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc__main_menu.html
@@ -64,6 +64,11 @@
             {{ user.get_full_name|default:user.get_username }}
         </a>
         {% endif %}
+        {% if user.is_superuser %}
+            <a href="{% url 'my_admin:index' %}">
+                админка
+            </a>
+        {% endif %}
         {% if user.is_authenticated %}
         <a href="{% url 'auth:logout' %}">
             выход
