--- a/adminapp/templates/adminapp/base.html
+++ b/adminapp/templates/adminapp/base.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
 {% load static %}
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>
         {% block title %}
-            {{ page_title|title }}
+        {{ page_title|title }}
         {% endblock %}
     </title>
     {% block css %}
-        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-        <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}"> -->
+    <link rel="stylesheet" href="{% static 'css/Chart.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/fontawesome.all.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/butttons.css' %}">
     {% endblock %}
     {% block js %}
-        <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     {% endblock %}
 </head>
+
 <body>
-<div class="admin_container">
-    <div class="h2 text-center head">
-        Админка
-    </div>
-    {% block menu %}
-        <div class="admin_menu">
-            {% include 'adminapp/includes/inc__admin_menu.html' %}
+    <div class="row justify-content-around align-items-center" style="height: 100vh; margin: 0px; margin-right: 50px;">
+        <div class="admin_container">
+            <div class="h2 text-center head">
+                Админка
+            </div>
+            {% block menu %}
+            <div class="admin_menu">
+                {% include 'adminapp/includes/inc__admin_menu.html' %}
+            </div>
+            {% endblock %}
+
+            {% block container %}
+            {% endblock %}
+
         </div>
-    {% endblock %}
-
-    {% block container %}
-    {% endblock %}
-
-</div>
+    </div>
 </body>
+
 </html>
