--- a/adminapp/templates/authapp_custom/customuser_list.html
+++ b/adminapp/templates/authapp_custom/customuser_list.html
@@ -1,14 +1,15 @@
 {% extends 'adminapp/base.html' %}
 {% load static %}
 
+
 {% block container %}
 <div class="users_list">
     <a href="{% url 'my_admin:user_create' %}" class="btn btn-primary new_user">
         новый пользователь
     </a>
-    {% for shop_user in users_list %}
+    {% for shop_user in object_list %}
     <div class="user_record {% if not shop_user.is_active %}not_active{% endif %}">
-        <!-- <img src="{{ MEDIA_URL }}{{ shop_user.avatar }}" alt="{{ shop_user.username }}"> -->
+       
         {% if shop_user.avatar %}
         <img src="{{ shop_user.avatar.url }}" alt="{{ shop_user.username }}">
         {% else %}
@@ -16,10 +17,10 @@
         {% endif %}
         <div class="user_role">
             {% if shop_user.is_superuser %}администратор{% else %}пользователь{% endif %}
-            <a href="{#% url 'my_admin:user_update' shop_user.pk %#}" class="btn btn-primary">
+            <a href="{% url 'my_admin:user_update' pk=shop_user.pk %}" class="btn btn-primary">
                 редактировать
             </a>
-            <a href="{#% url 'my_admin:user_delete' shop_user.pk %#}" class="btn btn-danger">
+            <a href="{% url 'my_admin:user_delete' pk=shop_user.pk %}" class="btn btn-danger">
                 удалить
             </a>
         </div>
