--- a/static/css/butttons.css
+++ b/static/css/butttons.css
@@ -35,3 +35,138 @@
     color: rgb(233, 233, 233);
     text-decoration: none;
   } */
+
+
+
+  .custombtn-clear {
+    padding: 3px 9px !important;
+    font-size: 14px !important;
+    color: rgb(233, 233, 233);
+    border: 2px solid #cbcbcb;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 5px #2c2f46;
+}
+
+.custombtn-clear-auth {
+    padding: 5px 12px !important;
+    font-size: 14px !important;
+    color: rgb(233, 233, 233);
+
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 5px #2c2f46;
+    width: 100%;
+    background-color: #353740 !important;
+    transition: box-shadow 0.3s ease-in-out;
+}
+
+.custombtn-clear-social {
+    padding: 5px 12px !important;
+    font-size: 14px !important;
+    color: rgb(233, 233, 233);
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 5px #2c2f46;
+    width: 100%;
+    background-color: #353740 !important;
+    transition: box-shadow 0.3s ease;
+}
+
+.custombtn-clear-main {
+    padding: 5px 12px !important;
+    font-size: 14px !important;
+    color: rgb(233, 233, 233);
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 5px #2c2f46;
+    background-color: #353740 !important;
+    transition: box-shadow 0.3s ease;
+}
+
+.custombtn-send {
+    padding: 5px 12px !important;
+    font-size: 14px !important;
+    color: rgb(233, 233, 233) !important;
+    background-color: #078749 !important;
+    border: 2px solid #cbcbcb;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 5px #2c2f46;
+}
+
+.custombtn-send-modal {
+    padding: 5px 12px !important;
+    font-size: 14px !important;
+    color: rgb(233, 233, 233) !important;
+    background-color: #078749 !important;
+    border: 2px solid #cbcbcb;
+    border-radius: 15px;
+    cursor: pointer;
+    box-shadow: 0 0 5px #2c2f46;
+    width: 100%;
+}
+
+
+.custombtn-voice {
+    padding: 3px 8px !important;
+    font-size: 12px !important;
+    color: rgb(233, 233, 233) !important;
+    border: 2px solid #cbcbcb;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 5px #2c2f46;
+    
+}
+
+.custombtn-voice-hold {
+    padding: 5px 12px !important;
+    font-size: 14px !important;
+    color: rgb(233, 233, 233) !important;
+    border: 2px solid #cbcbcb;
+    border-radius: 20px;
+    cursor: pointer;
+    box-shadow: 0 0 15px #2c2f46;
+    margin-bottom: 10px;
+    background-color: #a51212 !important;
+}
+
+.custombtn-voice-hold span {
+    font-size: 24px;
+}
+
+.custombtn-send:hover {
+    background-color: rgb(0, 187, 87) !important;
+}
+
+.custombtn-voice:hover {
+    background-color: #eb0000 !important;
+}
+
+.custombtn-clear:hover {
+    background-color: #000000 !important;
+}
+
+.custombtn-voice-hold:hover {
+    background-color: #eb0000 !important;;
+}
+
+.custombtn-clear-auth:hover {
+    box-shadow: 0 0 15px #2c2f46;
+    background-color: rgb(0, 187, 87) !important;
+    color: #282626;  
+}
+
+
+.custombtn-clear-social:hover {
+    box-shadow: 0 0 30px #2c2f46;
+    /*box-shadow: 0 0 15px #b1b1b1;*/
+    color: white; 
+}
+
+
+.custombtn-clear-main:hover {
+    box-shadow: 0 0 30px #2c2f46;
+    /*box-shadow: 0 0 15px #b1b1b1;*/
+    color: white;
+}
