--- a/authapp_custom/templates/authapp_custom/login.html
+++ b/authapp_custom/templates/authapp_custom/login.html
@@ -63,6 +63,11 @@
                         class="fab fa-facebook"></i></a>
                 <a class="btn btn-dark" style="background-color: #000408;" href="{% url 'social:begin' 'github' %}"
                     role="button"><i class="fab fa-github"></i></a>
+                <!-- <a class="btn btn-dark" href="{% url 'social:begin' 'google' %}"
+                    role="button"><i class="fab fa-google"></i></a> -->
+                <a class="btn btn-dark" style="background-color: #000408;" href="{% url 'social:begin' 'google-oauth2' %}" role="button"><i
+                        class="fab fa-google"></i></a>
+
             </div>
             </p>
         </div>
