--- a/mainapp/templates/mainapp/includes/inc__main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc__main_menu.html
@@ -34,7 +34,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{#% url 'orders:index' %#}">
+                        <a href="{% url 'orders:index' %}">
                             заказы
                         </a>
                     </li>
