--- a/authapp_custom/templates/authapp_custom/login.html
+++ b/authapp_custom/templates/authapp_custom/login.html
@@ -58,7 +58,7 @@
             <h4>Вход через социальные сети</h4>
             <p>
             <div class="btn-group btn-block" role="group">
-                <a class="btn btn-primary" href="#" role="button"><i class="fab fa-vk"></i></a>
+                <a class="btn btn-primary" href="{% url 'social:begin' 'vk-oauth2' %}" role="button"><i class="fab fa-vk"></i></a>
                 <a class="btn btn-primary" style="background-color: #0056b3;" href="#" role="button"><i
                         class="fab fa-facebook"></i></a>
                 <a class="btn btn-dark" style="background-color: #000408;" href="{% url 'social:begin' 'github' %}"
