--- a/ordersapp/templates/ordersapp/includes/inc__order_actions.html
+++ b/ordersapp/templates/ordersapp/includes/inc__order_actions.html
@@ -14,6 +14,6 @@
     к списку заказов
 </a>
 <a href="{% url 'mainapp:index' %}"
-   class="btn btn-default btn-round form-control last">
+   class="btn btn-secondary btn-round form-control last">
     на главную
 </a>
