--- a/ordersapp/templates/ordersapp/order_list.html
+++ b/ordersapp/templates/ordersapp/order_list.html
@@ -46,12 +46,12 @@
     </table>
 
     <a href="{% url 'mainapp:index' %}"
-       class="btn btn-default btn-round">
+       class="btn btn-secondary btn-round">
         на главную
     </a>
 
     <a href="{% url 'orders:order_create' %}"
-       class="btn btn-default btn-round">
+       class="btn btn-secondary btn-round">
         новый
     </a>
 
