--- a/ordersapp/templates/ordersapp/order_confirm_delete.html
+++ b/ordersapp/templates/ordersapp/order_confirm_delete.html
@@ -2,14 +2,19 @@
 {% load static %}
 
 {% block container %}
-    <div class="category_delete">
-        <div class="h1">Уверены, что хотите удалить?</div>
-        {% include 'ordersapp/includes/inc__order_summary.html' %}
-        <form method="post">
-            {% csrf_token %}
-            <input class="btn btn-danger" type="submit" value="удалить">
-        </form>
-
-        <a href="{% url 'ordersapp:index' %}" class="btn btn-success">отмена</a>
-    </div>
+<div class="category_delete">
+    <div class="h1">Уверены, что хотите удалить?</div>
+    {% include 'ordersapp/includes/inc__order_summary.html' %}
+    <form method="post">
+        {% csrf_token %}
+        <div class="btn-group btn-block" role="group">
+            <button type="submit" class="btn btn-danger">
+                удалить
+            </button>
+            <button type="button" onclick="location.href='{% url 'ordersapp:index' %}'"   class="btn btn-success">
+                отмена
+            </button>
+        </div>
+    </form>
+</div>
 {% endblock %}
