--- a/ordersapp/templates/ordersapp/order_detail.html
+++ b/ordersapp/templates/ordersapp/order_detail.html
@@ -13,7 +13,7 @@
                 <span class="product_name">{{ item.product.name }}</span>
                 <span class="product_price">{{ item.product.price }}&nbspруб</span>
                 <span class="product_quantitiy">x {{ item.quantity }} шт.</span>
-                <span class="product_cost"> = {{ item.get_product_cost }}&nbspруб</span>
+                <span class="product_cost"> = {{ item.product_cost }}&nbspруб</span>
             </div>
         {% endfor %}
     </div>
