--- a/ordersapp/templates/ordersapp/order_form.html
+++ b/ordersapp/templates/ordersapp/order_form.html
@@ -1,10 +1,9 @@
 {% extends "ordersapp/base.html" %}
 {% load static %}
-{% load crispy_forms_tags %}
+
 {% block container %}
 {% include 'ordersapp/includes/inc__order_summary.html' %}
 <div class="order_form">
-    <!-- {% include 'ordersapp/includes/inc__order_actions.html' %} -->
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
@@ -15,7 +14,7 @@
             <thead>
                 <tr>
                     {% for field in form.visible_fields %}
-                    <th class="{% cycle 'td1' 'td2' 'td3' %} order formset_td">
+                    <th class="{% cycle 'td1' 'td2' 'td3' 'td4' %} order formset_td">
                         {% if field.label == "Delete" %}
                         Удалить
                         {% else %}
@@ -28,21 +27,28 @@
             {% endif %}
             <tr class="formset_row">
                 {% for field in form.visible_fields %}
-                <td class="{% cycle 'td1' 'td2' 'td3' %} order formset_td">
+                <td class="{% cycle 'td1' 'td2' 'td3' 'td4' %} order formset_td">
                     {% if forloop.first %}
                     {% for hidden in form.hidden_fields %}
                     {{ hidden }}
                     {% endfor %}
                     {% endif %}
                     {{ field.errors.as_ul }}
+                    {% if field.name != 'price' %}
                     {{ field }}
+                    {% else %}
+                    {% if field.value %}
+                    <span class="orderitems-{{ forloop.parentloop.counter0 }}-price">
+                        {{ field.value }}
+                    </span> руб
+                    {% endif %}
+                    {% endif %}
                 </td>
                 {% endfor %}
             </tr>
             {% endfor %}
         </table>
         <input type="submit" value="сохранить" class="btn btn-secondary btn-round form-control last">
-        <!-- {% include 'ordersapp/includes/inc__order_actions.html' %} -->
     </form>
     {% include 'ordersapp/includes/inc__order_actions.html' %}
 </div>
