--- a/ordersapp/templates/ordersapp/base.html
+++ b/ordersapp/templates/ordersapp/base.html
@@ -14,8 +14,10 @@
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     {% endblock %}
     {% block js %}
-        <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/jquery.formset.js' %}"></script>
+    <script src="{% static 'js/order_scripts.js' %}"></script>
     {% endblock %}
 </head>
 <body>
