--- a/ordersapp/templates/ordersapp/order_form.html
+++ b/ordersapp/templates/ordersapp/order_form.html
@@ -48,13 +48,8 @@
             </tr>
             {% endfor %}
         </table>
-        <input type="submit" value="сохранить" class="btn btn-secondary btn-round form-control last">
+        <input type="submit" value="сохранить" class="btn btn-success btn-round form-control last">
     </form>
-    <style>
-        input[type="checkbox"] {
-            text-align: center;
-        }
-    </style>
     {% include 'ordersapp/includes/inc__order_actions.html' %}
 </div>
 {% endblock %}
